2006-06-16  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MediaView.py: clear image if none is selected

2006-06-16  Alex Roitman  <shura@gramps-project.org>
	* src/PluginUtils/_PluginMgr.py (register_report): Add
	require_active argument to _register_cl_report call.

2006-06-16  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamiy.py: make EditPerson windows subordinate
	to EditFamily windows. This prevents the EditPerson window from
	trying to trying to access a non-existent window and causing a
	segfault
	* src/GrampsDb/_WriteGedcom.py: export QUAY

2006-06-15  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: prevent null event types and
	attribute types from being added
	* src/Editors/_EditAttribute.py: prevent null attribute types
	* src/Editors/_EditEvent.py: prevent null attribute types
	* src/AutoComp.py: filter out empty strings
	* src/ImgManip.py: check for file before attempting thumbnailer
	* src/ScratchPad.py: enable Text dnd

2006-06-15  Alex Roitman  <shura@gramps-project.org>
	* src/Config/_GrampsConfigKeys.py: Re-generate file.
	* src/GrampsCfg.py: More name display prefs.
	* src/GrampsLogger/_ErrorReportAssistant.py (__init__): Adapt to
	the Assistant change. 
	* src/Assistant.py: Convert to working both with and without
	ManagedWindow.
	* src/DisplayTabs/Makefile.am (pkgdata_PYTHON): Ship new file.
	* src/DisplayTabs/__init__.py: Import new module.
	* src/DisplayTabs/_TextTab.py: Add new module.
	* src/Editors/_EditSourceRef.py (_setup_fields): Remove Text tab;
	(_create_tabbed_pages): Add Text tab.
	* src/glade/gramps.glade (source_ref_edit): Remove Text tab.
	* src/GrampsDb/_WriteGedcom.py (write_photo): Typo.
	* src/Exporter.py (build_options): Correctly shift all pages.
	(__init__): Adapt to the Assistant change.

2006-06-14  Don Allingham  <don@gramps-project.org>
	* src/ScratchPad.py: check for null model
	* src/GrampsDb/_ReadGedcom.py: fix INT date format
